--- a/style.css
+++ b/style.css
@@ -358,3 +358,18 @@ button {
   box-shadow: 0 0 25px rgba(255,255,255,0.8);
   margin-bottom: 10px;
 }
+
+
+.site-logo {
+  width: 260px;
+  max-width: 75vw;
+  margin-bottom: 10px;
+  filter: drop-shadow(0 0 15px rgba(255,255,255,0.6));
+}
+
+
+
+
+a {
+    color: #ffffffd6;
+}
